Fix sensorsimulator launching